Departments and items work with full functionality, as well as navbar.

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -2,6 +2,7 @@
 <%= link_to 'Add Department', new_department_path %>
 <ul>
   <% @departments.each do |department| %>
-    <li><%= link_to department.name, @department %></li>
+    <li><%= link_to department.name, department_path(department) %></li>
+    <%= link_to 'Remove Department', department, method: :delete %>
   <% end %>
 </ul>
