Add comment system.

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,4 +3,11 @@
 <p><%= @item.description %></p>
 <p><%= link_to 'Edit Item', edit_department_item_path(@department, @item) %>
 <%= link_to 'Delete Item', [@department, @item], method: :delete %> </p>
+<p><%= link_to 'Add Comment', new_item_comment_path(@item) %></p>
+<ul>
+<% @item.comments.each do |comment| %>
+  <li><%= comment.body %>
+  - <%= comment.author %></li>
+<% end %>
+</ul>
 <%= link_to 'Go Back to Department', department_items_path(@department) %>
